--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <div id="question">câu hỏi?</div>
+    <div id="question">Bạn có ghét tao không ?</div>
     <button id="yes">CÓ</button>
     <button id="no">KHÔNG</button>
 </body>
