--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body style="width: 100vw; height: 98vh; overflow: hidden">
-    <div id="question">Bạn có ghét tao không ?</div>
+    <div id="question">Bạn có ghét Trường không ?</div>
     <button id="yes">CÓ</button>
     <button id="no">KHÔNG</button>
 </body>
