--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	btn_yes.addEventListener("click", (e) => {
 		randw = 0
 		randh = 0
-		while(Math.abs(randw) < 200 || Math.abs(randh) < 100) {
+		while(Math.abs(randw) < 50 || Math.abs(randh) < 75) {
 			randw = getRndInteger(-parseInt(btn_yes.style.left), w - parseInt(btn_yes.style.left) - 200);
 			randh = getRndInteger(-parseInt(btn_yes.style.top), h - parseInt(btn_yes.style.top) - 75);
 		}
@@ -69,7 +69,7 @@
 		btn_yes.style.left = (parseInt(btn_yes.style.left) + randw) + "px";
 	});
 	btn_no.addEventListener("click", (e) => {
-		alert("Biết điều đấy ^v^ !")
+		alert("Cảm ơn bro ^v^ !")
 	})
 </script>
 </html>
